Fixed Navigation and Scrollbar color.

--- a/src/app.css
+++ b/src/app.css
@@ -22,6 +22,10 @@ html {
   font-family: var(--font-body), serif;
 }
 
+* {
+  scrollbar-color: #a7303555 #00000000;
+}
+
 ::-moz-selection {
   background: #a730355a;
   color: #E2CB14;
@@ -43,3 +47,4 @@ html {
 *::-webkit-scrollbar-thumb {
   background-color: #a7303555;
 }
+
